# todo_kafka

./: compose.yaml
microservice_todo_consumer/: Dockerfile  pyproject.toml
microservice_todo_consumer/microservice_todo_consumer/: main.py  models.py  settings.py
microservice_todo_producer/: .env  Dockerfile  pyproject.toml
microservice_todo_producer/microservice_todo_producer/: main.py  producer.py  settings.py
